# adventofcode

./: .coveragerc  .env.template  .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .setup.json.template  .versionrc  CHANGELOG.md  LICENSE  Makefile  README.md  main.py  pre-commit.template  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yaml  tests.yaml  update_readme.yaml  update_readme.yml
src/adventofcode/: __about__.py  __init__.py  config.py
src/adventofcode/registry/: __init__.py  decorators.py  util.py
src/adventofcode/scripts/: add_day.py  benchmarks.py  clean_repo.py  generate_readme.py  get_inputs.py  runner.py
src/adventofcode/util/: console.py  exceptions.py  helpers.py  input_helpers.py  math_helpers.py  module_helpers.py
src/adventofcode/year_2015/: README.md  __init__.py  day_01.py  day_01_2015.py  day_02.py  day_02_2015.py  day_03.py  day_03_2015.py  day_04.py  day_04_2015.py  day_05.py  day_05_2015.py  day_06_2015.py  day_07_2015.py  day_08_2015.py  day_09_2015.py  day_10_2015.py  day_11_2015.py  day_12_2015.py  day_13_2015.py  day_14_2015.py  day_15_2015.py  day_16_2015.py  day_17_2015.py  day_18_2015.py  day_19_2015.py  day_20_2015.py  day_21_2015.py  day_22_2015.py  day_23_2015.py  day_24_2015.py  day_25_2015.py
src/adventofcode/year_2020/: README.md  __init__.py  day_01_2020.py  day_02.py  day_02_2020.py  day_03_2020.py  day_04.py  day_04_2020.py  day_05.py  day_05_2020.py  day_06.py  day_06_2020.py  day_07.py  day_07_2020.py  day_08.py  day_08_2020.py  day_09.py  day_09_2020.py  day_10.py  day_10_2020.py  day_11.py  day_11_2020.py  day_12_2020.py  day_13_2020.py  day_14_2020.py  day_15_2020.py  day_16_2020.py
src/adventofcode/year_2021/: README.md  day_01_2021.py  day_02_2021.py  day_03_2021.py  day_04_2021.py  day_05_2021.py  day_06_2021.py  day_07_2021.py  day_08_2021.py  day_09_2021.py  day_10_2021.py  day_11_2021.py  day_12_2021.py  day_13_2021.py  day_14_2021.py  day_15_2021.py  day_16_2021.py  day_17_2021.py  day_18_2021.py  day_19_2021.py  day_20_2021.py  day_21_2021.py  day_22_2021.py  day_25_2021.py
src/adventofcode/year_2022/: README.md  day_01_2022.py  day_02_2022.py  day_03_2022.py  day_04_2022.py  day_05_2022.py  day_06_2022.py  day_07_2022.py  day_08_2022.py  day_09_2022.py  day_10_2022.py  day_11_2022.py  day_12_2022.py  day_13_2022.py  day_14_2022.py  day_15_2022.py
src/adventofcode/year_2023/: README.md  day_01_2023.py  day_02_2023.py  day_03_2023.py  day_04_2023.py  day_05_2023.py  day_06_2023.py  day_07_2023.py  day_08_2023.py  day_09_2023.py
src/adventofcode/year_2024/: README.md  day_01_2024.py
tests/: fixtures.py
tests/adventofcode/util/: test_input_helpers.py  test_math_helpers.py  test_module_helpers.py
tests/adventofcode/year_2015/: test_day_01_2015.py  test_day_02_2015.py  test_day_03_2015.py  test_day_04_2015.py  test_day_05_2015.py  test_day_06_2015.py  test_day_07_2015.py  test_day_08_2015.py  test_day_09_2015.py  test_day_10_2015.py  test_day_11_2015.py  test_day_12_2015.py  test_day_13_2015.py  test_day_14_2015.py  test_day_15_2015.py  test_day_16_2015.py  test_day_17_2015.py  test_day_18_2015.py  test_day_19_2015.py  test_day_20_2015.py  test_day_21_2015.py  test_day_23_2015.py  test_day_24_2015.py  test_day_25_2015.py
tests/adventofcode/year_2020/: test_day_01_2020.py  test_day_02_2020.py  test_day_03_2020.py  test_day_04_2020.py  test_day_05_2020.py  test_day_06_2020.py  test_day_07_2020.py  test_day_08_2020.py  test_day_10_2020.py  test_day_11_2020.py  test_day_12_2020.py  test_day_13_2020.py  test_day_14_2020.py  test_day_15_2020.py  test_day_16_2020.py
tests/adventofcode/year_2021/: test_day_01_2021.py  test_day_02_2021.py  test_day_03_2021.py  test_day_04_2021.py  test_day_05_2021.py  test_day_06_2021.py  test_day_07_2021.py  test_day_08_2021.py  test_day_09_2021.py  test_day_10_2021.py  test_day_11_2021.py  test_day_12_2021.py  test_day_13_2021.py  test_day_14_2021.py  test_day_15_2021.py  test_day_16_2021.py  test_day_17_2021.py  test_day_18_2021.py  test_day_19_2021.py  test_day_20_2021.py  test_day_21_2021.py  test_day_22_2021.py  test_day_25_2021.py
tests/adventofcode/year_2022/: test_day_01_2022.py  test_day_02_2022.py  test_day_03_2022.py  test_day_04_2022.py  test_day_05_2022.py  test_day_06_2022.py  test_day_07_2022.py  test_day_08_2022.py  test_day_09_2022.py  test_day_10_2022.py  test_day_11_2022.py  test_day_12_2022.py  test_day_13_2022.py  test_day_14_2022.py  test_day_15_2022.py
tests/adventofcode/year_2023/: test_day_01_2023.py  test_day_02_2023.py  test_day_03_2023.py  test_day_04_2023.py  test_day_05_2023.py  test_day_06_2023.py  (+3 more)
tests/util/: test_input_helpers.py  test_module_helpers.py
tests/year_2015/: test_day_01.py  test_day_01_2015.py  test_day_02.py  test_day_02_2015.py  test_day_03.py  test_day_04.py  test_day_04_2015.py  test_day_05.py  test_day_05_2015.py  test_day_06.py  test_day_07_2015.py  test_day_08_2015.py  test_day_09_2015.py  test_day_10_2015.py  test_day_12_2015.py  test_day_14_2015.py  test_day_15_2015.py  test_day_16_2015.py  test_day_17_2015.py  test_day_19_2015.py  test_day_20_2015.py  test_day_21_2015.py  test_day_22_2015.py  test_day_23_2015.py  test_day_24_2015.py  test_day_25_2015.py
tests/year_2020/: test_day_01.py  test_day_01_2020.py  test_day_02.py  test_day_02_2020.py  test_day_03.py  test_day_03_2020.py  test_day_04.py  test_day_04_2020.py  test_day_05.py  test_day_05_2020.py  test_day_06.py  test_day_06_2020.py  test_day_07.py  test_day_08.py  test_day_08_2020.py  test_day_09.py  test_day_09_2020.py  test_day_10.py  test_day_10_2020.py  test_day_11.py  test_day_12_2020.py  test_day_13_2020.py  test_day_15_2020.py  test_day_16_2020.py
tests/year_2021/: test_day_01_2021.py  test_day_02_2021.py  test_day_03_2021.py  test_day_04_2021.py  test_day_05_2021.py  test_day_06_2021.py  test_day_07_2021.py  test_day_08_2021.py  test_day_09_2021.py  test_day_10_2021.py  test_day_12_2021.py  test_day_13_2021.py  test_day_14_2021.py
(+72 files in other folders)
