[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adventofcode"
dynamic = ["version"]
description = "A collection of Advent of Code solutions"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = []
authors = [
    { name = "Marcel Blijleven", email = "marcelblijleven@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "rich>=10",

]

[project.urls]
Documentation = "https://github.com/unknown/adventofcode#readme"
Issues = "https://github.com/unknown/adventofcode/issues"
Source = "https://github.com/unknown/adventofcode"

[project.scripts]
add-day = "adventofcode.scripts.add_day:add_day"
clean-repo = "adventofcode.scripts.clean_repo:clean_repo"
generate-benchmarks = "adventofcode.scripts.benchmarks:generate_benchmarks"
generate-readme = "adventofcode.scripts.generate_readme:generate_readme"
run-all = "adventofcode.scripts.runner:run_all"


[tool.hatch.version]
path = "src/adventofcode/__about__.py"

[tool.hatch.envs.default]
dependencies = [
    "httpx",
    "coverage[toml]>=6.5",
    "pytest",
    "pytest-mock>=3.10",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
    "- coverage combine",
    "coverage report",
]
cov = [
    "test-cov",
    "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.11", "3.12"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
    "black>=23.1.0",
    "mypy>=1.0.0",
    "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/adventofcode tests}"
style = [
    "ruff {args:.}",
    "black --check --diff {args:.}",
]
fmt = [
    "black {args:.}",
    "ruff --fix {args:.}",
    "style",
]
all = [
    "style",
    "typing",
]

[tool.black]
target-version = ["py311"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py311"
line-length = 120
select = [
    "A",
    "ARG",
    "B",
    "C",
    "DTZ",
    "E",
    "EM",
    "F",
    "FBT",
    "I",
    "ICN",
    "ISC",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "Q",
    "RUF",
    "S",
    "T",
    "TID",
    "UP",
    "W",
    "YTT",
]
ignore = [
    # Allow non-abstract empty methods in abstract base classes
    "B027",
    # Allow boolean positional values in function calls, like `dict.get(... True)`
    "FBT003",
    # Ignore checks for possible passwords
    "S105", "S106", "S107",
    # Ignore complexity
    "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
    # Use of magic values
    "PLR2004",
    # Use of boolean default values in function definition
    "FBT001", "FBT002",
    # Exceptions with string literals
    "EM101", "EM102",
    # Concatenated string literals on one line
    "ISC001",

]
unfixable = [
    # Don't touch unused imports
    "F401",
]

[tool.ruff.isort]
known-first-party = ["adventofcode"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["adventofcode", "tests"]
branch = true
parallel = true
omit = [
    "src/adventofcode/__about__.py",
]

[tool.coverage.paths]
adventofcode = ["src/adventofcode", "*/adventofcode/src/adventofcode"]
tests = ["tests", "*/adventofcode/tests"]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.commitizen]
tag_format = "v$version"
version = "1.8.2"
version_files = [
    "src/adventofcode/__about__.py",
]