[metadata]
name = adventofcode
description = Collection of Advent of Code solutions
author = Marcel Blijleven
license = MIT
license_file = LICENSE
platforms = unix, linux, osx
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    adventofcode
install_requires =
    rich>=10
python_requires = >= 3.8
package_dir =
    =src
zip_safe = no

[options.entry_points]
console_scripts =
    generate-readme = adventofcode.scripts.generate_readme:generate_readme
    run-all = adventofcode.scripts.runner:run_all
    add-day = adventofcode.scripts.add_day:add_day
    clean-repo = adventofcode.scripts.clean_repo:clean_repo

[options.extras_require]
testing =
    pytest>=6.0
    pytest-mock>=3.6
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
adventofcode = py.typed

[flake8]
max-line-length = 160
max-complexity = 8
inline-quotes = single
avoid-escape = False
multiline-quotes = """
